refactor(main): trocar getFirst() por get(0)